--- a/README.Rmd
+++ b/README.Rmd
@@ -85,3 +85,35 @@ ggplot(plot_df, aes(x=e, y=att)) +
   theme_bw() +
   theme(legend.position="bottom")
 ```
+
+To conclude, we provide estimate effects of the effects of shelter-in-place orders on travel.  In the paper, we mainly consider the case where (i) the policy can have a direct effect on travel, (ii) the policy can have a direct effect on Covid-19 cases, and (iii) Covid-19 cases can have their own effect on travel.  This means that the policy can have an indirect effect on travel through its effect on Covid-19 cases.  We show in the paper that neither standard DID (ignoring cases) nor DID that includes current cases as a covariate delivers a suitable estimate of the effect of the policy on travel in this case.  We propose an alternative estimator that accounts for the indirect effect of the policy on travel through its effect on cases, and show code for this approach below.
+
+```{r}
+oo_res <- pte(yname="retail_and_recreation_percent_change_from_baseline",
+           gname="group",
+           tname="time.period",
+           idname="state_id",
+           data=covid_data2,
+           subset_fun=two_by_two_subset,
+           attgt_fun=other_outcome_attgt,
+           xformla=xformla,
+           max_e=21,
+           min_e=-10,
+           Iname="current",
+           adjustI=TRUE) 
+
+summary(oo_res)
+
+# make an event study plot
+plot_df <- summary(oo_res)$event_study
+colnames(plot_df) <- c("e", "att", "se", "cil", "ciu")
+plot_df$post <- as.factor(1*(plot_df$e >= 0))
+ggplot(plot_df, aes(x=e, y=att)) +
+  geom_line(aes(color=post)) +
+  geom_point(aes(color=post)) + 
+  geom_line(aes(y=ciu), linetype="dashed", alpha=0.5) +
+  geom_line(aes(y=cil), linetype="dashed", alpha=0.5) +
+  theme_bw() +
+  ylim(c(-30,30)) + 
+  theme(legend.position="bottom")
+```
