--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ To demonstrate our approach, we provide a shortened version of the application f
 data(covid_data)
 
 # formula for covariates
-xformla <- ~ current + I(current^2) + I(current^2) + region + totalTestResults
+xformla <- ~ current + I(current^2) + region + totalTestResults
 ```
 
 A first issue is that there are major overlap violations  --- for example, there are just not good comparison states for New York.  As a first step, we drop those:
@@ -73,17 +73,7 @@ summary(res)
 ```
 and we can also plot the results in event study.
 ```{r}
-plot_df <- summary(res)$event_study
-colnames(plot_df) <- c("e", "att", "se", "cil", "ciu")
-plot_df$post <- as.factor(1*(plot_df$e >= 0))
-ggplot(plot_df, aes(x=e, y=att)) +
-  geom_line(aes(color=post)) +
-  geom_point(aes(color=post)) + 
-  geom_line(aes(y=ciu), linetype="dashed", alpha=0.5) +
-  geom_line(aes(y=cil), linetype="dashed", alpha=0.5) +
-  ylim(c(-1000,1000)) +
-  theme_bw() +
-  theme(legend.position="bottom")
+ggpte(res) + ylim(c(-1000,1000))
 ```
 
 To conclude, we provide estimate effects of the effects of shelter-in-place orders on travel.  In the paper, we mainly consider the case where (i) the policy can have a direct effect on travel, (ii) the policy can have a direct effect on Covid-19 cases, and (iii) Covid-19 cases can have their own effect on travel.  This means that the policy can have an indirect effect on travel through its effect on Covid-19 cases.  We show in the paper that neither standard DID (ignoring cases) nor DID that includes current cases as a covariate delivers a suitable estimate of the effect of the policy on travel in this case.  We propose an alternative estimator that accounts for the indirect effect of the policy on travel through its effect on cases, and show code for this approach below.
@@ -105,15 +95,5 @@ oo_res <- pte(yname="retail_and_recreation_percent_change_from_baseline",
 summary(oo_res)
 
 # make an event study plot
-plot_df <- summary(oo_res)$event_study
-colnames(plot_df) <- c("e", "att", "se", "cil", "ciu")
-plot_df$post <- as.factor(1*(plot_df$e >= 0))
-ggplot(plot_df, aes(x=e, y=att)) +
-  geom_line(aes(color=post)) +
-  geom_point(aes(color=post)) + 
-  geom_line(aes(y=ciu), linetype="dashed", alpha=0.5) +
-  geom_line(aes(y=cil), linetype="dashed", alpha=0.5) +
-  theme_bw() +
-  ylim(c(-30,30)) + 
-  theme(legend.position="bottom")
+ggpte(oo_res) + ylim(c(-30,30))
 ```
