--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ library(ggplot2)
 ```
 # Pandemic Policy Evaluation (ppe) package
 
-The `ppe` package contains code for estimating policy effects during the pandemic.  It is the companion code for [Callaway and Li (2021).  Policy Evaluation during a Pandemic](https://arxiv.org/abs/2105.06927).  The central idea of that paper is to compare locations who implemented some policy to other locations that did not implement the policy *and that had the same pre-treatment values of Covid-19 related characteristics*.  These characteristics definitely include (i) the current number of cases and (ii) the number of susceptible individuals (or equivalently the cumulative number of cases).  They might also include demographic characteristics, population densities, region of the country, among others.  
+The `ppe` package contains code for estimating policy effects during the pandemic.  It is the companion code for [Callaway and Li (2021),  Policy Evaluation during a Pandemic](https://arxiv.org/abs/2105.06927).  The central idea of that paper is to compare locations who implemented some Covid-19 related policy to other locations that did not implement the policy *and that had the same pre-treatment values of Covid-19 related characteristics*.  These characteristics definitely include (i) the current number of cases and (ii) the number of susceptible individuals (or equivalently the cumulative number of cases).  They might also include demographic characteristics, population densities, region of the country, among others.  
 
 This amounts to an unconfoundedness-type strategy.  In the paper, we compare it to a difference in differences strategy and argue that the unconfoundedness strategy is likely to be more appropriate to evaluate policies during the pandemic.  The rationale for this argument is that epidemic models from the epidemiology literature are highly nonlinear but do not involve individual-level unobserved heterogeneity.  See our [five minute summary](https://bcallaway11.github.io/posts/five-minute-pandemic-policy) for additional discussion along these lines.
 
@@ -76,7 +76,7 @@ and we can also plot the results in event study.
 ggpte(res) + ylim(c(-1000,1000))
 ```
 
-To conclude, we provide estimate effects of the effects of shelter-in-place orders on travel.  In the paper, we mainly consider the case where (i) the policy can have a direct effect on travel, (ii) the policy can have a direct effect on Covid-19 cases, and (iii) Covid-19 cases can have their own effect on travel.  This means that the policy can have an indirect effect on travel through its effect on Covid-19 cases.  We show in the paper that neither standard DID (ignoring cases) nor DID that includes current cases as a covariate delivers a suitable estimate of the effect of the policy on travel in this case.  We propose an alternative estimator that accounts for the indirect effect of the policy on travel through its effect on cases, and show code for this approach below.
+To conclude, we provide estimated effects of the effects of shelter-in-place orders on travel.  In the paper, we mainly consider the case where (i) the policy can have a direct effect on travel, (ii) the policy can have a direct effect on Covid-19 cases, and (iii) Covid-19 cases can have their own effect on travel.  This means that the policy can have an indirect effect on travel through its effect on Covid-19 cases.  We show in the paper that neither standard DID (ignoring cases) nor DID that includes current cases as a covariate delivers a suitable estimate of the effect of the policy on travel in this case.  We propose an alternative estimator that accounts for the indirect effect of the policy on travel through its effect on cases, and show code for this approach below.
 
 ```{r}
 oo_res <- pte(yname="retail_and_recreation_percent_change_from_baseline",
