--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ library(ggplot2)
 ```
 # Pandemic Policy Evaluation (ppe) package
 
-The `ppe` package contains code for estimating policy effects during the pandemic.  It is the companion code for [Callaway and Li (2021),  Policy Evaluation during a Pandemic](https://arxiv.org/abs/2105.06927).  The central idea of that paper is to compare locations who implemented some Covid-19 related policy to other locations that did not implement the policy *and that had the same pre-treatment values of Covid-19 related characteristics*.  These characteristics definitely include (i) the current number of cases and (ii) the number of susceptible individuals (or equivalently the cumulative number of cases).  They might also include demographic characteristics, population densities, region of the country, among others.  
+The `ppe` package contains code for estimating policy effects during the pandemic.  It is the companion code for [Callaway and Li (2023),  Policy Evaluation during a Pandemic](https://arxiv.org/abs/2105.06927).  The central idea of that paper is to compare locations who implemented some Covid-19 related policy to other locations that did not implement the policy *and that had the same pre-treatment values of Covid-19 related characteristics*.  These characteristics definitely include (i) the current number of cases and (ii) the number of susceptible individuals (or equivalently the cumulative number of cases).  They might also include demographic characteristics, population densities, region of the country, among others.  
 
 This amounts to an unconfoundedness-type strategy.  In the paper, we compare it to a difference in differences strategy and argue that the unconfoundedness strategy is likely to be more appropriate to evaluate policies during the pandemic.  The rationale for this argument is that epidemic models from the epidemiology literature are highly nonlinear but do not involve individual-level unobserved heterogeneity.  See our [five minute summary](https://bcallaway11.github.io/posts/five-minute-pandemic-policy) for additional discussion along these lines.
 
@@ -64,6 +64,7 @@ res <- pte(yname="positive",
            idname="state_id",
            data=covid_data2,
            subset_fun=two_by_two_subset,
+           setup_pte_fun=setup_pte_basic,
            attgt_fun=covid_attgt,
            xformla=xformla,
            max_e=21,
@@ -85,6 +86,7 @@ oo_res <- pte(yname="retail_and_recreation_percent_change_from_baseline",
            idname="state_id",
            data=covid_data2,
            subset_fun=two_by_two_subset,
+           setup_pte_fun=setup_pte_basic,
            attgt_fun=other_outcome_attgt,
            xformla=xformla,
            max_e=21,
